@@ -3,6 +3,7 @@ package io.github.alien.roseau.diff.formatter;
 import io.github.alien.roseau.api.model.TypeDecl;
 import io.github.alien.roseau.api.model.TypeMemberDecl;
 import io.github.alien.roseau.diff.RoseauReport;
+import io.github.alien.roseau.diff.changes.BreakingChange;
 import io.github.alien.roseau.diff.changes.BreakingChangeDetails;
 
 import java.util.stream.Collectors;
@@ -25,61 +26,61 @@ public class CliFormatter implements BreakingChangesFormatter {
 	@Override
 	public String format(RoseauReport report) {
 		return report.getBreakingChanges().stream()
-			.map(bc -> {
-				String details = switch (bc.details()) {
-					case BreakingChangeDetails.None d -> "";
-					case BreakingChangeDetails.MethodReturnTypeChanged(var oldType, var newType) ->
-						"old: %s, new: %s".formatted(oldType, newType);
-					case BreakingChangeDetails.FieldTypeChanged(var oldType, var newType) ->
-						"old: %s, new: %s".formatted(oldType, newType);
-					case BreakingChangeDetails.MethodAddedToInterface(var newMethod) ->
-						"method: " + newMethod.getSignature();
-					case BreakingChangeDetails.MethodAbstractAddedToClass(var newMethod) ->
-						"method: " + newMethod.getSignature();
-					case BreakingChangeDetails.SuperTypeRemoved(var type) ->
-						"type: " + type;
-					case BreakingChangeDetails.AnnotationTargetRemoved(var target) ->
-						"target: " + target;
-					case BreakingChangeDetails.AnnotationMethodAddedWithoutDefault(var newMethod) ->
-						"method: " + newMethod.getSignature();
-					case BreakingChangeDetails.ClassTypeChanged(var oldType, var newType) ->
-						"old: %s, new: %s".formatted(oldType.getSimpleName(), newType.getSimpleName());
-					case BreakingChangeDetails.MethodNoLongerThrowsCheckedException(var exc) ->
-						"exception: " + exc;
-					case BreakingChangeDetails.MethodNowThrowsCheckedException(var exc) ->
-						"exception: " + exc;
-					case BreakingChangeDetails.MethodFormalTypeParametersAdded(var ftp) ->
-						"type parameter: " + ftp;
-					case BreakingChangeDetails.MethodFormalTypeParametersRemoved(var ftp) ->
-						"type parameter: " + ftp;
-					case BreakingChangeDetails.TypeFormalTypeParametersAdded(var ftp) ->
-						"type parameter: " + ftp;
-					case BreakingChangeDetails.TypeFormalTypeParametersRemoved(var ftp) ->
-						"type parameter: " + ftp;
-					case BreakingChangeDetails.MethodFormalTypeParametersChanged(var oldFtp, var newFtp) ->
-						"type parameter: " + oldFtp + " -> " + newFtp;
-					case BreakingChangeDetails.TypeFormalTypeParametersChanged(var oldFtp, var newFtp) ->
-						"type parameter: " + oldFtp + " -> " + newFtp;
-					case BreakingChangeDetails.MethodParameterGenericsChanged(var oldFtp, var newFtp) ->
-						"type: " + oldFtp + " -> " + newFtp;
-				};
+			.map(this::formatBC)
+			.collect(Collectors.joining(System.lineSeparator()));
+	}
 
-				boolean symbolInType = bc.impactedSymbol() instanceof TypeDecl ||
-					bc.impactedSymbol() instanceof TypeMemberDecl member &&
-						member.getContainingType().getQualifiedName().equals(bc.impactedType().getQualifiedName());
-				if (plain) {
-					return String.format("%s %s%s%s%n\t%s:%s", bc.kind(), bc.impactedSymbol().getQualifiedName(),
-						symbolInType ? "" : " in " + bc.impactedType().getQualifiedName(),
-						details.isEmpty() ? "" : " [%s]".formatted(details),
-						bc.impactedSymbol().getLocation().file(), bc.impactedSymbol().getLocation().line());
-				} else {
-					return String.format("%s %s%s%s%n\t%s:%s",
-						RED_TEXT + BOLD + bc.kind() + RESET,
-						UNDERLINE + bc.impactedSymbol().getQualifiedName() + RESET,
-						symbolInType ? "" : " in " + bc.impactedType().getQualifiedName(),
-						details.isEmpty() ? "" : " [%s]".formatted(details),
-						bc.impactedSymbol().getLocation().file(), bc.impactedSymbol().getLocation().line());
-				}
-			}).collect(Collectors.joining(System.lineSeparator()));
+	private String formatBC(BreakingChange bc) {
+		String details = formatDetails(bc.details());
+		boolean isLocalSymbol =
+			bc.impactedSymbol() instanceof TypeDecl ||
+				(bc.impactedSymbol() instanceof TypeMemberDecl member &&
+					member.getContainingType().getQualifiedName().equals(bc.impactedType().getQualifiedName()));
+
+		if (plain) {
+			return String.format("%s %s%s%s%n\t%s:%s",
+				bc.kind(),
+				bc.impactedSymbol().getQualifiedName(),
+				isLocalSymbol ? "" : " in " + bc.impactedType().getQualifiedName(),
+				details.isEmpty() ? "" : " [%s]".formatted(details),
+				bc.impactedSymbol().getLocation().file(),
+				bc.impactedSymbol().getLocation().line());
+		} else {
+			return String.format("%s %s%s%s%n\t%s:%s",
+				RED_TEXT + BOLD + bc.kind() + RESET,
+				UNDERLINE + bc.impactedSymbol().getQualifiedName() + RESET,
+				isLocalSymbol ? "" : " in " + bc.impactedType().getQualifiedName(),
+				details.isEmpty() ? "" : " [%s]".formatted(details),
+				bc.impactedSymbol().getLocation().file(),
+				bc.impactedSymbol().getLocation().line());
+		}
+	}
+
+	private static String formatDetails(BreakingChangeDetails details) {
+		return switch (details) {
+			case BreakingChangeDetails.None() -> "";
+			case BreakingChangeDetails.MethodReturnTypeChanged(var oldType, var newType) ->
+				"%s -> %s".formatted(oldType, newType);
+			case BreakingChangeDetails.FieldTypeChanged(var oldType, var newType) -> "%s -> %s".formatted(oldType, newType);
+			case BreakingChangeDetails.MethodAddedToInterface(var newMethod) -> newMethod.getSignature();
+			case BreakingChangeDetails.MethodAbstractAddedToClass(var newMethod) -> newMethod.getSignature();
+			case BreakingChangeDetails.SuperTypeRemoved(var type) -> type.toString();
+			case BreakingChangeDetails.AnnotationTargetRemoved(var target) -> target.name();
+			case BreakingChangeDetails.AnnotationMethodAddedWithoutDefault(var newMethod) -> newMethod.getSignature();
+			case BreakingChangeDetails.ClassTypeChanged(var oldType, var newType) ->
+				"%s -> %s".formatted(oldType.getSimpleName(), newType.getSimpleName());
+			case BreakingChangeDetails.MethodNoLongerThrowsCheckedException(var exc) -> exc.getQualifiedName();
+			case BreakingChangeDetails.MethodNowThrowsCheckedException(var exc) -> exc.getQualifiedName();
+			case BreakingChangeDetails.MethodFormalTypeParametersAdded(var ftp) -> ftp.name();
+			case BreakingChangeDetails.MethodFormalTypeParametersRemoved(var ftp) -> ftp.name();
+			case BreakingChangeDetails.TypeFormalTypeParametersAdded(var ftp) -> ftp.name();
+			case BreakingChangeDetails.TypeFormalTypeParametersRemoved(var ftp) -> ftp.name();
+			case BreakingChangeDetails.MethodFormalTypeParametersChanged(var oldFtp, var newFtp) ->
+				"%s -> %s".formatted(oldFtp.name(), newFtp.name());
+			case BreakingChangeDetails.TypeFormalTypeParametersChanged(var oldFtp, var newFtp) ->
+				"%s -> %s".formatted(oldFtp.name(), newFtp.name());
+			case BreakingChangeDetails.MethodParameterGenericsChanged(var oldType, var newType) ->
+				"%s -> %s".formatted(oldType, newType);
+		};
 	}
 }
